removed search bars